# core-orchestrator

./: Dockerfile  pyproject.toml
docs/prompts/: CORE_ORCHESTRATOR.md
src/core_orchestrator/: __init__.py  config.py  flow_manager.py  main.py  schemas.py
src/core_orchestrator/flows/: freelance.yaml
tests/unit/: test_flow_manager.py
